# polyjam

./: CMakeLists.txt  License.txt  README.md  README.txt
include/polyjam/: polyjam.hpp
include/polyjam/core/: Coefficient.hpp  Monomial.hpp  Poly.hpp  PolyMatrix.hpp  Term.hpp
include/polyjam/elimination/: CMatrix.hpp  GaussJordan.hpp  methods.hpp
include/polyjam/exports/: MacaulayTwo.hpp
include/polyjam/fields/: Field.hpp  Q.hpp  R.hpp  Sym.hpp  Zp.hpp
polyjam_M2_scripts/: README.txt
polyjam_documentation/: README.txt  flow_chart.pptx  todo.txt
polyjam_generator/: CMakeLists.txt
polyjam_generator/include/polyjam/: polyjam.hpp
polyjam_generator/include/polyjam/core/: Coefficient.hpp  Monomial.hpp  Poly.hpp  PolyMatrix.hpp  Term.hpp
polyjam_generator/include/polyjam/fields/: Field.hpp  Q.hpp  R.hpp  Sym.hpp  Zp.hpp
polyjam_generator/include/polyjam/generator/: CMatrix.hpp  ExportMacaulay.hpp  methods.hpp
polyjam_generator/include/polyjam/math/: GaussJordan.hpp
polyjam_generator/src/: polyjam.cpp
polyjam_generator/src/core/: Coefficient.cpp  Monomial.cpp  Poly.cpp  PolyMatrix.cpp  Term.cpp
polyjam_generator/src/fields/: Q.cpp  R.cpp  Sym.cpp  Zp.cpp
polyjam_generator/src/generator/: CMatrix.cpp  ExportMacaulay.cpp  methods.cpp
polyjam_generator/src/math/: GaussJordan.cpp
polyjam_problems/: sw6pt.cpp
polyjam_solvers/: README.txt
polyjam_solvers/gen3pt/: CMakeLists.txt  GaussJordan.cpp  GaussJordan.hpp  experiment_helpers.cpp  experiment_helpers.hpp  random_generators.cpp  random_generators.hpp  test.cpp  time_measurement.cpp  time_measurement.hpp
polyjam_solvers/opnp/: CMakeLists.txt  test.cpp
polyjam_solvers/sw6pt/: CMakeLists.txt  test.cpp
polyjam_workspace/: CMakeLists_template.txt  generate
polyjam_workspace/gen3pt/: gen3pt.cpp
polyjam_workspace/opnp/: opnp.cpp
polyjam_workspace/sw6pt/: sw6pt.cpp
src/: polyjam.cpp
src/core/: Coefficient.cpp  Monomial.cpp  Poly.cpp  PolyMatrix.cpp  Term.cpp
src/elimination/: CMatrix.cpp  GaussJordan.cpp  methods.cpp
src/exports/: MacaulayTwo.cpp
src/fields/: Q.cpp  R.cpp  Sym.cpp  Zp.cpp
